Config for CSL-Dashboard-Module (Work in progress), Bootstrap

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser": "^5.2.10",
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
+    "angular-dashboard-components": "git+ssh://git@csl-intern.local.hcu-hamburg.de:till.degkwitz/angular-dashboard-components.git",
+    "angular-highcharts": "^6.1.3",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.5.5",
     "d3": "^3.5.17",
     "openlayers": "^4.6.5",
@@ -38,6 +41,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.106",
     "@types/openlayers": "^4.6.8",
+    "@types/highcharts": "^5.0.18",
     "codelyzer": "^4.2.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
