Moved basic layer configuration to config.json

--- a/src/app/config-dist.json
+++ b/src/app/config-dist.json
@@ -1,3 +1,8 @@
 {
-  "enableTuio": false
+  "enableTuio": false,
+  "topics": [],
+  "stages": [],
+  "baseLayers": [],
+  "topicLayers": [],
+  "stickyLayers": []
 }
