--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
     "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/router": "^5.2.11",
-    "angular-dashboard-components": "git+ssh://git@csl-intern.local.hcu-hamburg.de:till.degkwitz/angular-dashboard-components.git",
-    "angular-highcharts": "^6.1.4",
+    "angular-dashboard-components": "git+https://git.csl-intern.local.hcu-hamburg.de/till.degkwitz/angular-dashboard-components.git",
+    "angular-highcharts": "^6.2.6",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.5.7",
     "d3": "^3.5.17",
     "openlayers": "^4.6.5",
     "rxjs": "^5.5.11",
-    "tuio-client": "file:../tuio-client/dist",
+    "tuio-client": "git+https://git.csl-intern.local.hcu-hamburg.de/cityscope/tuio-client.git",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.11",
     "@angular/language-service": "^5.2.11",
-    "@types/d3": "^3.5.40",
-    "@types/highcharts": "^5.0.18",
+    "@types/d3": "^3.5.41",
+    "@types/highcharts": "^5.0.26",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.112",
-    "@types/openlayers": "^4.6.9",
-    "codelyzer": "^4.3.0",
+    "@types/node": "^6.0.116",
+    "@types/openlayers": "^4.6.10",
+    "codelyzer": "^4.4.3",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
