Studentenprojekt initiale Layeranzeige angepasst

--- a/src/app/config.studentenprojekt.json
+++ b/src/app/config.studentenprojekt.json
@@ -106,7 +106,7 @@
         "format": "GeoJSON"
       },
       "zIndex": 100,
-      "visible": true,
+      "visible": false,
       "selectable": true,
       "style": {
         "circle": {
@@ -264,7 +264,7 @@
         }
       },
       "zIndex": 10,
-      "visible": true,
+      "visible": false,
       "selectable": true,
       "legendUrl": "assets/legend-kita.png",
       "meta": "Quelle: BASFI",
@@ -353,7 +353,7 @@
       },
       "opacity": 0.6,
       "zIndex": 1,
-      "visible": true,
+      "visible": false,
       "selectable": true,
       "legendHtml": "<div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(160, 82, 45, 0.6);\"></span>&nbsp;Kleingarten</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(60, 179, 113, 0.6);\"></span>&nbsp;Parkanlage</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(124, 252, 0, 0.6);\"></span>&nbsp;Spielplatz</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(72, 209, 204, 0.6);\"></span>&nbsp;Friedhof</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(199, 21, 133, 0.6);\"></span>&nbsp;Schutzgrün</div><div class=\"legend-row\"><span class=\"legend-box\" style=\"background-color: rgba(106, 90, 205, 0.6);\"></span>&nbsp;anderweitige Nutzung</div>",
       "meta": "Quelle: LGV",
